--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -1,135 +1,1019 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: "Poppins", sans-serif;
-    background-color: #ECF0F1;
-    color: #333;
-    scroll-behavior: smooth;
-}
-a{
-    text-decoration: none;
-}
-li{
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #d9d9d9;
+  min-height: 100vh;
 }
 
-header {
-    background-color: #ECF0F1;
-    padding: 20px;
-    justify-content: space-between;
-    align-items: center;
-}
-.nav{
-    display: flex;
-    justify-content: space-between;
+h1,
+p,
+form {
+  margin: 0;
+  padding: 0;
 }
 
-.logo img {
-    height: 50px;
+.indexhtml {
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  box-sizing: border-box;
+  background-color: #d9d9d9;
+  padding-bottom: 1rem;
+  height: 100vh;
+}
+.form-container {
+  overflow-y: auto;
+  width: 60%;
 }
 
-nav ul {
-    list-style-type: none;
+.image-container {
+  width: 40%;
+  height: 100vh;
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
+#image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
-.search-bar {
-    display: flex;
-    align-items: center;
+.container {
+  width: 80%;
+  margin: 3rem auto;
+  overflow-y: auto;
 }
 
-.search-bar input {
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    width: 200px;
+.header-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.search-bar .search-btn {
-    background-color: #ff9900;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    margin-left: 5px;
-    border-radius: 4px;
+h1 {
+  color: #2c3e50;
+  font-family: Merriweather, serif;
+  font-weight: 700;
+  line-height: 48.6px;
+  align-items: center;
 }
 
-.buttons {
-    text-align: center;
-    margin: 20px 0;
+#header-text {
+  font-family: roboto;
+  font-style: italic;
+  font-weight: 200;
+  font-size: 16px;
+  color: #7f8c8d;
+  line-height: 23.44px;
+  text-align: center;
 }
 
-.buttons button {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    padding: 10px 20px;
-    margin: 10px;
-    border-radius: 4px;
-    cursor: pointer;
+.form-area {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-top: 1rem;
 }
 
-.buttons button:hover {
-    background-color: #f0f0f0;
+#input-field {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 398px;
+  max-width: 400px;
+  min-width: min-content;
 }
 
-.trending-topics {
-    max-width: 1200px;
-    margin: 40px auto;
-    padding: 0 20px;
+#input-field label {
+  font-family: Merriweather, serif;
+  font-size: 20px;
+  font-weight: 700;
+  color: #2c3e50;
 }
 
-.trending-topics h2 {
-    text-align: center;
-    margin-bottom: 30px;
-    font-size: 28px;
+#input-field input {
+  border: 1px solid #2c3e50;
+  border-radius: 10px;
+  box-sizing: border-box;
+  background-color: #fff;
+  background-image: none;
+  cursor: pointer;
+  outline: none;
+  /* padding: 14px 16px; */
+  box-sizing: border-box;
+  height: 40px;
 }
 
-.topics-grid {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
+#input-field #placeholder {
+  font-style: italic;
+  font-size: 10px;
+  color: #7f8c8d;
+}
+input {
+  padding: 23px 58px;
+}
+#signup-btn {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  background-color: #f39c12;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+  border: 1px solid transparent;
+  width: 398px;
+  max-width: 400px;
+  min-width: min-content;
+  box-sizing: border-box;
+  margin-top: 8px;
+  border-radius: 15px;
+  min-height: 48px;
 }
 
-.topic {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    flex: 1;
-    text-align: center;
+#signup-btn:hover {
+  background-color: #f19d15c9;
 }
 
-.topic img {
+#line {
+  color: #7f8c8d;
+  display: inline-flex;
+  width: 398px;
+  max-width: 400px;
+  min-width: min-content;
+  gap: 1rem;
+  align-items: center;
+}
+
+#line hr {
+  margin: 0;
+  width: 40%;
+  color: #7f8c8d;
+  height: 0.2px;
+}
+
+.button {
+  display: flex;
+  margin-top: 1.5rem;
+  gap: 10rem;
+}
+
+#google-btn {
+  background-color: #7f8c8d59;
+  color: #7f8c8d;
+  font-weight: 200;
+  font-size: 12px;
+  border-radius: 10px;
+  border: 1px solid transparent;
+  width: 120px;
+  max-width: 130px;
+  min-width: min-content;
+  box-sizing: border-box;
+  min-height: 35px;
+  height: min-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.2rem;
+  font-family: Roboto;
+}
+
+#google-btn:hover {
+  transform: scale(0.9);
+}
+
+#google-logo {
+  width: 15px;
+}
+
+#facebook-btn {
+  background-color: #7f8c8d59;
+  color: #7f8c8d;
+  font-weight: 200;
+  font-size: 12px;
+  border-radius: 10px;
+  border: 1px solid transparent;
+  width: 120px;
+  max-width: 130px;
+  min-width: min-content;
+  box-sizing: border-box;
+  min-height: 35px;
+  height: min-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.2rem;
+  font-family: Roboto;
+}
+
+#facebook-btn:hover {
+  transform: scale(0.9);
+}
+
+#policy {
+  font-family: Roboto;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  width: 398px;
+  max-width: 400px;
+  min-width: min-content;
+  margin-top: 3rem;
+  color: #7f8c8d;
+}
+
+#policy a {
+  text-decoration: none;
+  color: #7f8c8d;
+}
+
+#policy a:hover {
+  text-decoration: underline;
+  color: #0a66c2;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    overflow: auto;
+  }
+
+  h1 {
+    font-weight: 500;
+    line-height: 28.6px;
+    font-size: 25px;
+  }
+
+  .image-container {
+    width: 100vw;
+    height: 40vh;
+  }
+
+  #image {
     width: 100%;
     height: auto;
-    border-radius: 8px;
-    margin-bottom: 15px;
+    object-fit: cover;
+  }
+
+  .container {
+    width: 90%;
+    margin: 2rem auto;
+    overflow-y: auto;
+  }
 }
 
-.topic h3 {
-    font-size: 18px;
-    margin-bottom: 20px;
+form div.incorrect label {
+  color: #f06272;
 }
 
-.follow-btn {
-    background-color: #ff9900;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+form div.incorrect #input-field {
+  border-color: #f06272;
 }
 
-.follow-btn:hover {
-    background-color: #e68a00;
+#error-message {
+  color: #f06272;
 }
+
+.landing-page {
+  gap: 3rem;
+  box-sizing: border-box;
+  background-color: #d9d9d9;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 3rem;
+}
+
+.navbar-img {
+  width: 200px;
+  height: 48px;
+}
+
+.vector-img {
+  width: 35px;
+}
+
+.paddyblog-img {
+  width: 160px;
+}
+
+.menulist {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.menulist-item {
+  color: #2c3e50;
+  display: flex;
+  gap: 2.2rem;
+  font-size: 12px;
+  font-weight: 300;
+  font-family: Tinos, "Merriweather", serif;
+  text-align: center;
+  align-items: center;
+}
+
+.menulist-item:hover {
+  font-size: 14px;
+  font-weight: 700;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  line-height: 1.5;
+}
+
+.comm-login {
+  display: flex;
+  gap: 5rem;
+}
+
+.comm-login .comm {
+  color: #2c3e50;
+  font-family: Tinos, "Merriweather", serif;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 300;
+  align-items: center;
+  cursor: pointer;
+}
+
+.comm-login .comm:hover {
+  text-decoration: underline;
+  font-size: 14px;
+  font-weight: 700;
+  /* transition: all 0.3s ease; */
+}
+
+.login {
+  background-color: #f39c12;
+  color: #fff;
+  font-family: Tinos, "Merriweather", serif;
+  box-shadow: 0 0 0 1px #f39c12;
+  border: 1px solid transparent;
+  border-radius: 24px;
+  height: min-content;
+  min-height: 30px;
+  padding: 12px 24px;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 300;
+  cursor: pointer;
+  outline: none;
+}
+
+.login:hover {
+  background-color: #f09400;
+}
+
+.topimg-container {
+  width: auto;
+  height: 100vh;
+  margin: 0 3rem;
+  background-image: url("./img/topframe.png");
+  background-size: cover;
+}
+
+.content {
+  padding-top: 10%;
+  max-width: 1200px;
+}
+
+.top-header {
+  text-align: center;
+  color: rgba(236, 240, 241, 1);
+  font-size: 64px;
+  font-weight: 700;
+  font-family: Tinos, "Merriweather", serif;
+  align-items: center;
+  line-height: 86.4px;
+}
+
+.top-body {
+  color: rgba(236, 240, 241, 1);
+  font-size: 24px;
+  font-weight: 400;
+  font-family: "Arial", sans-serif;
+  text-align: center;
+  line-height: 28px;
+}
+
+.topimg-btns {
+  display: flex;
+  align-self: center;
+  margin-top: 30px;
+  padding: 10px;
+  gap: 1rem;
+  justify-content: center;
+  outline: none;
+}
+
+.Register-btn {
+  background-color: #f39c12;
+  color: #fff;
+  font-family: "Arial", sans-serif;
+  box-shadow: 0 0 0 1px #f39c12;
+  border: 1px solid transparent;
+  border-radius: 24px;
+  height: min-content;
+  min-height: 39px;
+  padding: 12px 24px;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 300;
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
+
+.Register-btn:hover {
+  background-color: transparent;
+  transform: scale(1);
+}
+
+.learn-btn {
+  text-align: center;
+  font-size: 12px;
+  font-family: "Arial", sans-serif;
+  font-weight: 300;
+  cursor: pointer;
+  color: #f39c12;
+  box-shadow: 0 0 0 1px #f39c12;
+  font-family: "Arial", sans-serif;
+  border-radius: 24px;
+  height: min-content;
+  min-height: 39px;
+  padding: 12px 24px;
+  background-color: transparent;
+  outline: none;
+  border: 1px solid #f39c12;
+}
+
+.learn-btn:hover {
+  background-color: #f39c12;
+  color: #fff;
+  transform: scale(1);
+}
+
+.why-paddyblog {
+  text-align: center;
+  color: #2c3e50;
+  align-items: center;
+}
+
+.why-header {
+  font-family: Tinos, "Merriweather", serif;
+  font-size: 36px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.why-body {
+  font-family: "Arial", sans-serif;
+  font-size: 20px;
+  justify-content: center;
+  text-align: center;
+  color: #2c3e50;
+  margin-top: 0;
+}
+
+.why-paddyblog-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 15px;
+}
+
+.why-paddyblog-left {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 2rem;
+  gap: 1.5rem;
+  font-family: "Arial", sans-serif;
+  font-size: 18px;
+  color: #2c3e50;
+  align-items: flex-start;
+}
+
+.why-paddyblog-right {
+  display: flex;
+  width: 50%;
+  justify-content: flex-start;
+  padding-right: 3rem;
+}
+
+#ladyseating-img {
+  width: 300px;
+  height: 260px;
+  padding-left: -1rem;
+  /* object-fit: cover; */
+}
+
+.text-with-icon {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.icon-wrapper {
+  border: 1px solid #7f8c8d;
+  box-shadow: 0 0 0 1px #7f8c8d;
+  background-color: #7f8c8d;
+  border-radius: 16px;
+  width: 28px;
+  height: 30px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+/* .getstarted-btn {
+  background-color: #f39c12;
+  color: #fff;
+  font-family: "Arial", sans-serif;
+  box-shadow: 0 0 0 1px #f39c12;
+  border: 1px solid transparent;
+  border-radius: 24px;
+  height: min-content;
+  min-height: 30px;
+  padding: 12px 24px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 300;
+  cursor: pointer;
+  outline: none;
+  align-self: center;
+}
+
+.getstarted-btn:hover {
+  background-color: #f09400;
+} */
+
+.create-a-post {
+  font-family: Tinos, "Merriweather", serif;
+  color: #2c3e50;
+}
+
+h3 {
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  margin-top: 6rem;
+}
+
+.image-gap {
+  gap: 1.5rem;
+  display: flex;
+  padding-left: 1.8rem;
+  padding-right: 1.8rem;
+}
+
+.create-a-post-img {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  gap: 1rem;
+  justify-content: center;
+  /* margin: 0 auto; */
+}
+
+.create-a-post-img p {
+  font-size: 15px;
+  font-family: "Arial", sans-serif;
+  color: #2c3e50;
+}
+
+.start-btn {
+  text-align: center;
+  font-size: 12px;
+  font-family: "Arial", sans-serif;
+  font-weight: 300;
+  cursor: pointer;
+  color: #f39c12;
+  box-shadow: 0 0 0 1px #f39c12;
+  font-family: "Arial", sans-serif;
+  border-radius: 24px;
+  height: min-content;
+  min-height: 39px;
+  padding: 12px 24px;
+  background-color: transparent;
+  outline: none;
+  border: 1px solid #f39c12;
+  margin-top: 2rem;
+  float: right;
+  margin-right: 3rem;
+}
+
+.start-btn:hover {
+  background-color: #f39c12;
+  color: #fff;
+}
+
+.testimonial-content {
+  color: #2c3e50;
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.testimonial-header {
+  font-family: Tinos, "Merriweather", serif;
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.testimonial-body {
+  font-family: "Arial", sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  margin-top: 1rem;
+}
+
+.carousel-container {
+  position: relative;
+  display: flex;
+  margin-top: 3rem;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  padding: 20px;
+  /* border-radius: 20px; */
+  /* box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1); */
+  /* background-color: rgba(127, 140, 141, 1); */
+  /* width: 50%;
+height: 100px; */
+}
+
+.carousel {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  margin-top: 2rem;
+  width: 100%;
+}
+
+.testimonial {
+  min-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.testimonials-content {
+  background-color: rgba(127, 140, 141, 1);
+  padding: 30px;
+  width: 30%;
+  border-radius: 20px;
+  position: relative;
+  text-align: center;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.user-img {
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 0.5px solid white;
+}
+
+.user-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.testimonial-text {
+  margin-top: 60px;
+}
+
+.review {
+  font-size: 21px;
+  color: rgba(255, 255, 255, 1);
+  margin-bottom: 10px;
+  line-height: 1.6;
+  font-family: "Arial", sans-serif;
+}
+
+.salamah {
+  font-size: 31px;
+  color: #2c3e50;
+  font-family: Tinos, "Merriweather", serif;
+  margin-top: 10px;
+}
+
+.ux {
+  color: rgba(255, 255, 255, 1);
+  font-size: 14px;
+  font-family: "Arial", sans-serif;
+}
+
+.carousel-container button {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.2);
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 50px;
+}
+
+.carousel-container button:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.prev {
+  left: 15px;
+}
+
+.next {
+  right: 15px;
+}
+
+
+.footer {
+  background-color: rgba(127, 140, 141, 1);
+  /* height: 20%; */
+  margin-top: 5rem;
+  color: #fefefe;
+  width: 100%;
+}
+
+.footer .content {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 2.5rem;
+}
+
+.footer .content p {
+  margin-bottom: 1.3rem;
+}
+
+.footer .content a {
+  text-decoration: none;
+  color: #fefefe;
+}
+
+.footer .content a:hover {
+  border-bottom: 1px solid #971717;
+}
+
+.footer .content h4 {
+  margin-bottom: 1.3rem;
+  font-size: 19px;
+}
+
+.footer .content .icons {
+  display: flex;
+  gap: 20px;
+}
+
+footer {
+  background-color: #2c3e50;
+}
+
+footer hr {
+  margin: 2rem 0;
+}
+
+.legal {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.legal .Subscribe {
+  color: #f39c12;
+}
+
+@media screen and (min-width: 24.375em) {
+  .legal .legal__links {
+    margin-left: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer .content {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .footer .content,
+  .footer {
+    font-size: 14px;
+  }
+}
+
+.post-creation-page {
+  width: 100%;
+  /* overflow-y: auto; */
+  display: flex;
+  box-sizing: border-box;
+  padding-bottom: 2rem;
+  height: 100vh;
+}
+
+.left-section {
+  width: 25%;
+  /* max-height: 100vh; */
+  background-color: rgba(189, 195, 199, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.righ-section {
+  overflow-y: auto;
+  width: 60%;
+}
+
+.blog-logo {
+  margin-left: 2rem;
+  margin-top: 2rem;
+}
+
+.manageaccount {
+  margin: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
+.info-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250px;
+  box-sizing: border-box;
+}
+
+.left-section img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.username {
+  align-items: center;
+  justify-content: space-between;
+  display: inline-flex;
+  flex-direction: row;
+  gap: 10px;
+  /* margin-bottom: 1rem; */
+}
+
+.username h2 {
+  color: rgba(44, 62, 80, 1);
+  font-size: 24px;
+  font-weight: 600;
+  font-family: Tinos, "Merriweather", serif;
+  margin: 10px;
+  line-height: 27px;
+}
+
+.username p {
+  color: rgba(127, 140, 141, 1);
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Arial", sans-serif;
+  line-height: 21px;
+}
+
+.username h4 {
+  font-size: 16px;
+  font-weight: 700;
+  font-family: "Arial", sans-serif;
+  color: rgba(44, 62, 80, 1);
+  /* display: flex; */
+  gap: 6px;
+}
+
+.username span {
+  color: rgba(127, 140, 141, 1);
+  font-size: 14px;
+  font-weight: 400;
+}
+
+hr {
+  color: #7f8c8d;
+  width: 200px;
+  /* align-self: center; */
+  min-width: min-content;
+  gap: 0.5rem;
+  display: inline-flex;
+  max-width: 210px;
+  width: 100%;
+  border: 1px solid #7f8c8d;
+  margin: 0;
+}
+
+.page-contents {
+   display: flex;
+  flex-direction: column; 
+  /* align-items: center; */
+  gap: 1.5rem;
+  text-decoration: none;
+  color: #2c3e50;
+  margin-top: 2rem;
+ justify-content: center;
+ margin-bottom: 2rem;
+}
+
+.post-creation-icon{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.page-contents a {
+  font-size: 14px;
+  color: #2c3e50;
+  font-family: Tinos, "Merriweather", serif;
+  text-decoration: none;
+  font-weight: 400;
+}
+
+.page-contents a:hover {
+  text-decoration: underline;
+  font-weight: 700;
+} 
+
+.manageaccount button {
+  background-color: #f39c12;
+  color: #fff;
+  font-family: Tinos, "Merriweather", serif;
+font-size: 18px;
+font-weight: 700;
+box-shadow: 0 0 0 1px #f39c12;
+border: 1px solid transparent;
+border-radius: 24px;
+height: min-content;
+min-height: 25px;
+padding: 12px 24px;
+text-align: center;
+cursor: pointer;
+outline: none;
+width: 190px;
+}
+
+.manageaccount h5 {
+  font-size: 18px;
+  font-weight: 700;
+  color: #2c3e50;
+  font-family: Tinos, "Merriweather", serif;
+  text-decoration: underline;
+  text-align: center;
+  margin-top: 2rem;
+  float: inline-start;
+  cursor: pointer;
+}
+
+.righ-section nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #971717;
+  /* align-items: center; */
+  /* padding: 1rem 5rem; */
+}
+
+/* .righ-section form {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.right-section form input {
+  padding-left: 30px;
+  font-size: 16px;
+  width: 200px; 
+}
+
+.right-section form i {
+  position: absolute;
+  left: 10px;
+  color: #889596;
+  font-size: 16px;
+} */
