--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -36,8 +36,12 @@ html, body {
   padding: 30px;
 }
 
-form.container {
+.inner-content {
   width: 50%;
+}
+
+form.container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
